Archive2/42/5a4f32391dda68/output
+ g++-4.8 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘void CallFunction(BaseFunctionPointerHolder*, ParamType1)’:
main.cpp:40:48: error: ‘ParamType2’ has not been declared
     typedef void (* FunctionType)( ParamType1, ParamType2 );
                                                ^
main.cpp:44:67: error: ‘param2’ was not declared in this scope
     pDowncastFunctionPointerHolder->m_pPointerToFunction( param1, param2 );
                                                                   ^
